--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -47,3 +47,7 @@ production:
   email_provider_password: <%= ENV["SENDGRID_PASSWORD"] %> 
   domain_name: <%= ENV["DOMAIN_NAME"] %>
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  fb_app_id: <%= ENV["FACEBOOK_APP_ID"] %>
+  fb_app_secret: <%= ENV["FACEBOOK_APP_SECRET"] %>
+  google_client_id: <%= ENV["GOOGLE_CLIENT_ID"] %>
+  google_client_secret: <%= ENV["GOOGLE_CLIENT_SECRET"] %>
